# cobol-xstate-json

./: .gitignore  CLAUDE.md  MANUAL.md  README.md  build.py  cobol-xstate.py  package.json  pyproject.toml
docs/: artifacts-target.md  business-view.md  dynamic-calls.md  fetch-stages.md  jcl-target.md  lineage-target.md  mainframe-artifacts.md  reactive-target.md  state-graph-plan.md
examples/: accum.cbl  altswitch.cbl  banktran.cbl  calltwice.cbl  cicsinq.cbl  condlin.cbl  custrec.cpy  custrpt.cbl  db2diag.cbl  depending.cbl  divrem.cbl  fileerr.cbl  lineage.cbl  mqcall.cbl  nestedpgm.cbl  nestperf.cbl  notend.cbl  perftwice.cbl  readinto.cbl  readproc.cbl  recur.cbl  retdisp.cbl  sectperf.cbl  sorter.cbl  sqlcols.cbl  sqldml.cbl  sqlload.cbl  sqlsel.cbl  sqlunld.cbl  tblsum.cbl  thrurange.cbl  timesexit.cbl  twogets.cbl  twotimes.cbl  txnflat.cbl  varysum.cbl
examples/jcl/: acctunld.jcl  condflow.jcl  copyrepr.jcl  dailypost.jcl  edvalid.prc
runtime/: cobolDriver.mjs  cobolRuntime.mjs
src/cobol_xstate/: __init__.py  __main__.py  analysis.py  artifact_service.py  artifacts.py  business.py  classify.py  cli.py  data_division.py  dynamic_calls.py  emitter.py  errors.py  fetch.py  harel.py  interface.py  jcl.py  jcl_views.py  lexer.py  lineage.py  logging_setup.py  model.py  naming.py  normalizer.py  parser.py  prefetch.py  preprocessor.py  profiling.py  reactive.py  runtime_assets.py  semantics.py  statechart.py  storage.py
tests/: test_artifacts.py  test_business.py  test_classify.py  test_cli.py  test_data_semantics.py  test_dynamic_calls.py  test_emitter.py  test_fetch.py  test_golden_master.py  test_harel.py  test_interface.py  test_jcl.py  test_lexer.py  test_lineage.py  test_logging.py  test_normalizer.py  test_parser.py  test_performance.py  test_prefetch.py  test_preprocessor.py  test_reactive.py  test_render_viewer.py  test_sql_fixtures.py  test_statechart.py  test_storage.py
viz/: README.md  render_statechart.py
(+1 files in other folders)
