[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cobol-xstate"
version = "0.1.0"
description = "Parse IBM Enterprise COBOL and emit its control flow as an XState v5 JSON Harel statechart (a modernization rewrite contract)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Paul Howard" }]
keywords = ["cobol", "mainframe", "xstate", "statechart", "harel", "modernization", "parser"]

[project.scripts]
cobol-xstate = "cobol_xstate.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
