[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cobol-xstate"
version = "0.1.0"
description = "Parse IBM Enterprise COBOL and emit its control flow as an XState v5 JSON Harel statechart (a modernization rewrite contract)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Paul Howard" }]
keywords = ["cobol", "mainframe", "xstate", "statechart", "harel", "modernization", "parser"]

[project.scripts]
cobol-xstate = "cobol_xstate.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

# The JS decimal runtime + reference driver ship INSIDE the package: `--target js`
# writes cobolRuntime.mjs beside the emitted module, so it must be importable from an
# installed wheel, not only from a source checkout.
[tool.setuptools.package-data]
cobol_xstate = ["runtime/*.mjs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the src/ layout on sys.path so `python -m pytest` works without installing the
# package or setting PYTHONPATH (pytest >= 7).
pythonpath = ["src"]
